# akane-bot

./: .gitignore  Cargo.toml  README.md  akane-database.db  rustfmt.toml
migrations/2021-04-15-194844_create_bans/: down.sql  up.sql
migrations/2021-04-17-194822_bans/: up.sql
migrations/2021-04-17-194822_create_banlist/: down.sql  up.sql
migrations/2021-04-17-221048_mutelist/: up.sql
migrations/2021-04-17-221048_mutes/: down.sql  up.sql
migrations/2021-04-24-211524_gulag/: down.sql  up.sql
migrations/2021-04-24-211524_gulags/: up.sql
src/: database.rs  main.rs  models.rs  schema.rs
src/commands/: general.rs  mod.rs  moderator.rs  voice.rs
src/database/: bans.rs  gulags.rs  mod.rs  mutes.rs
src/env/: checks.rs  mod.rs
src/error/: mod.rs
src/handler/: mod.rs
src/migrations/2021-04-17-221048_mutelist/: down.sql
src/migrations/2021-04-24-211524_gulag/: down.sql
src/models/: insertable.rs  log.rs  mod.rs  queryable.rs  role.rs
src/shard_manager/: mod.rs
src/util/: log.rs  mod.rs  role.rs  voice.rs
src/util/voice/: mod.rs  music.rs  voice_chat.rs
