[package]
name = "akane-bot"
version = "0.2.5"
authors = ["clarity"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.5", features = ["full"] }
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
chrono = "0.4"
