[package]
name = "akane-bot"
version = "0.2.9"
authors = ["clarity"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.5"
tokio = { version = "1.5", features = ["full"] }
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
chrono = "0.4"
songbird = { version = "0.1.6", features = ["builtin-queue"] }

[profile.release]
lto = true
panic = "abort"
